<resources>
    <string name="app_name">BPSIP</string>
    <string name="n_siswa">Nama Siswa/Mahasiswa</string>
    <string name="n_nim">NIM</string>
    <string name="n_univ">Sekolah/Universitas</string>
    <string name="n_jurusan">Jurusan</string>
    <string name="n_hape">Nomor Hape</string>
    <string name="n_magang">Waktu Magang</string>
    <string name="kirim">Kirim</string>
    <string name="upload">Upload Surat Permohonan</string>
    <string name="title_form">Silahkan Isi Form</string>
    <string name="alamat">Alamat</string>
    <string name="nama_pel">Nama Pelanggan</string>
    <string name="institusi">Institusi</string>
    <string name="nama">Nama</string>
    <string name="nik">NIK (Nomor Induk Kependudukan)</string>
    <string name="email">Email</string>
    <string name="lingkup_analisis">Lingkup Analisis</string>
    <string name="ruang_lingkup_analisis">Ruang Lingkup Analisis</string>
    <string name="laboratorium_peralatan">Laboratorium Peralatan</string>
    <string name="peralatan">Peralatan</string>
    <string name="tarif">Tarif</string>
    <string name="stock_benih">Stock Benih</string>
    <string name="jumlah_benih">Jumlah Benih</string>
    <string name="tugas_dan_fugsi">Tugas dan Fugsi</string>
    <string name="struktur_organisasi">Struktur Organisasi</string>
    <string name="struktur">Struktur</string>
    <string name="dashboard">Dashboard</string>
    <string name="taman_agrostandar">Taman Agrostandar</string>
    <string name="perpustakaan">Perpustakaan</string>
    <string name="instalasi_pengujian_dan_penerapan_standar">Instalasi Pengujian dan Penerapan Standar Instrumen Pertanian</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="uraian">Uraian</string>
    <string name="link_fb">https://www.facebook.com/profile.php?id=100090443922393</string>
    <string name="link_yt">https://www.youtube.com/@bsipriauchannel</string>
    <string name="bsip">BSIP RIAU</string>
</resources>