<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.Laboratorium.FormSample">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img1"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/logo2"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <TextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/main"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="Pendaftaran Sample"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl1"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reg"
        app:layout_constraintBottom_toTopOf="@+id/navbar_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv1"
                android:paddingStart="20dp"
                android:layout_marginTop="40dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_form"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <EditText
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/labNama"
                android:layout_below="@+id/tv1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textColorHint="@color/greyy"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/nama_pel"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/labAlamat"
                android:layout_below="@+id/labNama"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/greyy"
                android:background="@color/white"
                android:hint="@string/alamat"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/labInstitusi"
                android:layout_below="@+id/labAlamat"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/greyy"
                android:background="@color/white"
                android:hint="@string/institusi"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/labNohp"
                android:layout_below="@+id/labInstitusi"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/greyy"
                android:background="@color/white"
                android:inputType="phone"
                android:hint="@string/nomor_hp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/labSample"
                android:layout_below="@+id/labNohp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text"
                android:background="@color/white"
                android:textColorHint="@color/greyy"
                android:hint="Jenis Sample"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/labSample"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/main"
                android:textColor="@color/white"
                android:text="@string/kirim"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/main"
        app:itemTextColor="@color/main"
        app:itemActiveIndicatorStyle="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navbar_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>