<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.Layanan.Pengaduan">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img1"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo2"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/main"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="Pengaduan"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl1"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reg"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv1"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_form"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/nama"
                android:layout_below="@+id/tv1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textColorHint="@color/greyy"
                android:hint="@string/nama"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edNik"
                android:layout_below="@+id/nama"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textColorHint="@color/greyy"
                android:hint="@string/nik"
                android:inputType="number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edAlamat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/edNik"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/alamat"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:paddingEnd="10dp"
                android:textColorHint="@color/greyy"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edNohp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/edAlamat"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/nomor_hp"
                android:inputType="number"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edTempat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/edNohp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Tempat Kejadian"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:paddingEnd="10dp"
                android:textColorHint="@color/greyy"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edTanggal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/edTempat"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:inputType="date"
                android:hint="Tanggal Kejadian (20 - 08 - 2021)"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/greyy"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edPengaduan"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="140dp"
                android:layout_below="@+id/edTanggal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:background="@color/white"
                android:textColorHint="@color/greyy"
                android:hint="@string/uraian"
                android:inputType="text|textMultiLine"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edPengaduan"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <Button
                    android:id="@+id/uploadFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="100dp"
                    android:layout_toStartOf="@+id/ivPoto"
                    android:backgroundTint="@color/white"
                    android:text="@string/pilih_foto"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivPoto"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    tools:srcCompat="@tools:sample/avatars" />
            </RelativeLayout>

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/rl2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/main"
                android:textColor="@color/white"
                android:text="@string/kirim"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/main"
        app:itemTextColor="@color/main"
        app:itemActiveIndicatorStyle="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navbar_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>