<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.Layanan.Konsultasi">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img1"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/logo2"
                android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <TextView
        android:id="@+id/konsultasi"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/main"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="Konsultasi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl1"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/konsultasi"
        app:layout_constraintBottom_toTopOf="@+id/navbar_konsultasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv1"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Silahkan Isi Form Konsultasi"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/konsulNik"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv1"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:hint="@string/nik"
                android:inputType="number"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/konsulNama"
                android:layout_below="@+id/konsulNik"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Nama Lengkap"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:inputType="text"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/konsulAlamat"
                android:layout_below="@+id/konsulNama"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:hint="@string/alamat"
                android:inputType="textMultiLine"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/konsulInstitusi"
                android:layout_below="@+id/konsulAlamat"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:background="@color/white"
                android:hint="@string/institusi"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/konsulEmail"
                android:layout_below="@+id/konsulInstitusi"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:background="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/konsulNohp"
                android:layout_below="@+id/konsulEmail"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:hint="@string/nomor_hp"
                android:inputType="phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/komen"
                android:layout_below="@+id/konsulNohp"
                android:gravity="top"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:background="@color/white"
                android:textColorHint="@color/greyy"
                android:textColor="@color/black"
                android:inputType="text|textMultiLine"
                android:hint="Tuliskan Pesan Anda"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnKirim"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_below="@+id/komen"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/main"
                android:textSize="15sp"
                android:text="@string/kirim" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar_konsultasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/main"
        app:itemTextColor="@color/main"
        app:itemActiveIndicatorStyle="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navbar_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>